proptest-attributes/tests/compile-fail/multiple-args.stderr
error: The #[proptest] macro can only be applied to a function with a single argument.
  --> $DIR/multiple-args.rs:10:1
   |
10 | fn parse_date(date: String, _second_arg: String) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  |
  = note: consider adding a `main` function to `$DIR/tests/compile-fail/multiple-args.rs`

For more information about this error, try `rustc --explain E0601`.